fixed slideshow and blurred background issue

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,6 +4,8 @@ body {
     background-color: #f9f9f9;
 }
 
+
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -86,7 +88,7 @@ body {
   .slide img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 12px;
     z-index: 2;
     position: relative;
